src/c/dynamics.h

/**
 * Runge-Kutta 2/3 integration method.
 */
#define DYN_RUNGE_KUTTA_23 10
/**
 * Runge-Kutta 4/5 integration method.
 */
#define DYN_RUNGE_KUTTA_45 11
/**
 * Runge-Kutta 8/5/3 integration method.
 */
#define DYN_RUNGE_KUTTA_853 12
/**
 * Rosenbrock integration method.
 */
#define DYN_ROSENBROCK 13
/**
 * Backward-differentiation-formula integration method.
 */
#define DYN_BDF 14
/**
 * Adams integration method.
 */
#define DYN_ADAMS 15
/**
 * Kennedy-Carpenter fourth-order integration method.
 */
#define DYN_KENNEDY_CARPENTER_4 16
/**
 * Kennedy-Carpenter fifth-order integration method.
 */
#define DYN_KENNEDY_CARPENTER_5 17
/**
 * Tsitouras fifth-order integration method.
 */
#define DYN_TSITOURAS_5 18
/**
 * State-space input callback used by c_lti_solve.
 * @param n Input count.
 * @param t Time.
 * @param u Output input vector.
 */
typedef void (*c_ss_excitation)(int n, double t, double *u);
/**
 * @brief A polynomial with dynamically allocated coefficients.
 */
typedef struct
{
    /**
     * Polynomial order.
    */
    int order;
    /**
     * Coefficients in ascending order of power.
    */
    double *coefficients;
} c_polynomial;
/**
 * @brief A numerator/denominator transfer-function pair.
 */
typedef struct
{
    /**
     * Numerator polynomial.
    */
    c_polynomial numerator;
    /**
     * Denominator polynomial.
    */
    c_polynomial denominator;
} c_transfer_function;
/**
 * @brief A continuous state-space model with column-major matrices.
 */
typedef struct
{
    /**
     * Number of state variables.
    */
    int dimension;
    /**
     * Number of inputs.
    */
    int n_inputs;
    /**
     * Number of outputs.
    */
    int n_outputs;
    /**
     * State matrix, dimension by dimension.
    */
    double *A;  // dimension -by- dimension
    /**
     * Input matrix, dimension by n_inputs.
    */
    double *B;  // dimension -by- n_inputs
    /**
     * Output matrix, n_outputs by dimension.
    */
    double *C;  // n_outputs -by- dimension
    /**
     * Feedthrough matrix, n_outputs by n_inputs.
    */
    double *D;  // n_outputs -by- n_inputs
} c_state_space_model;
/**
 * Evaluate a transfer function at complex points.
 * @param tf Transfer function.
 * @param n Evaluation count.
 * @param s Complex evaluation points.
 * @param z Output complex values.
 */
void c_evaluate_transfer_function(const c_transfer_function *tf, int n,
    const double complex *s, double complex *z);
/**
 * Compute transfer-function poles.
 * @param tf Transfer function.
 * @param n Pole count.
 * @param p Output poles.
 */
void c_transfer_function_poles(const c_transfer_function *tf, int n, 
    double complex *p);
/**
 * Compute transfer-function zeros.
 * @param tf Transfer function.
 * @param n Zero count.
 * @param z Output zeros.
 */
void c_transfer_function_zeros(const c_transfer_function *tf, int n,
    double complex *z);
/**
 * Convert a transfer function to controllable canonical state space.
 * @param tf Transfer function.
 * @param ss Output state-space model.
 */
void c_to_ccf_state_space(const c_transfer_function *tf, c_state_space_model *ss);
/**
 * Convert a transfer function to observable canonical state space.
 * @param tf Transfer function.
 * @param ss Output state-space model.
 */
void c_to_ocf_state_space(const c_transfer_function *tf, c_state_space_model *ss);
/**
 * Create a state-space model from mass, damping, and stiffness matrices.
 * @param n State dimension.
 * @param n_out Output count.
 * @param m Mass matrix.
 * @param ldm Leading dimension of m.
 * @param b Damping matrix.
 * @param ldb Leading dimension of b.
 * @param k Stiffness matrix.
 * @param ldk Leading dimension of k.
 * @param mdl Output model.
 */
void c_create_state_space_model(int n, int n_out, const double *m, int ldm,
    const double *b, int ldb, const double *k, int ldk, 
    c_state_space_model *mdl);
/**
 * Create a PID-controlled plant state-space model.
 * @param kp Proportional gain.
 * @param ki Integral gain.
 * @param kd Derivative gain.
 * @param tau Derivative filter time constant.
 * @param plant Plant model.
 * @param mdl Output model.
 */
void c_create_pid_state_space_model(double kp, double ki, double kd, double tau,
    const c_state_space_model *plant, c_state_space_model *mdl);
/**
 * Multiply two transfer functions.
 * @param tf1 First transfer function.
 * @param tf2 Second transfer function.
 * @param tf Output product.
 */
void c_transfer_function_multiply(const c_transfer_function *tf1,
    const c_transfer_function *tf2, c_transfer_function *tf);
/**
 * Scale a transfer function.
 * @param x Scale factor.
 * @param tf1 Input transfer function.
 * @param tf Output scaled transfer function.
 */
void c_scale_transfer_function(double x, const c_transfer_function *tf1,
    c_transfer_function *tf);
/**
 * Integrate a continuous state-space model.
 * @param mdl State-space model.
 * @param u Input callback.
 * @param n Time-sample count.
 * @param t Time samples.
 * @param ndof Input degrees of freedom.
 * @param ic Initial state.
 * @param solver Integration method.
 * @param nout Output count.
 * @param y Output samples.
 * @param ldy Leading dimension of y.
 */
void c_lti_solve(const c_state_space_model *mdl, const c_ss_excitation u,
    int n, const double *t, int ndof, const double *ic, int solver, 
    int nout, double *y, int ldy);
/**
 * Compute state-space poles.
 * @param mdl State-space model.
 * @param n Pole count.
 * @param p Output poles.
 */
void c_state_space_poles(const c_state_space_model *mdl, int n,
    double complex *p);
/**
 * Compute state-space zeros.
 * @param mdl State-space model.
 * @param n Zero count.
 * @param z Output zeros.
 * @param nz Output number of zeros.
 */
void c_state_space_zeros(const c_state_space_model *mdl, int n,
    double complex *z, int *nz);
/**
 * Evaluate the state-space transfer matrix.
 * @param mdl State-space model.
 * @param nin Input count.
 * @param nout Output count.
 * @param n Evaluation count.
 * @param s Complex evaluation points.
 * @param z Output transfer values.
 * @param ldz Leading dimension of z.
 */
void c_state_space_transfer_function(const c_state_space_model *mdl, int nin,
    int nout, int n, const double complex *s, double complex *z, int ldz);